--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <i class="ri-camera-fill" id="camera"></i>
         <h1> capturing the moments that <br>captivate your heart.</h1>
         <input type="text" placeholder="search here....">
-        <button><i class="ri-search-line"></i></button>
+        <button><i class="ri-search-line"></i> search</button>
        </div>
     </header>
     <div class="filter-gallery" id="gallery">
@@ -41,32 +41,42 @@
             </ul>
         </div>
         <div class="portfolio-item">
-            <div class="item nature">
-                <img src="img/p1.jpg" alt="" width="100" height="100">
+            <div class="raw-1">
+
+                <div class="item nature">
+                    <img src="img/p1.jpg" alt="" width="100" height="100">
+                    <div class="overlay"></div>
+                </div>
+                <div class="item fasion">
+                    <img src="img/p2.jpg" alt="" width="100" height="100">
+                </div>
+                <div class="item weading">
+                    <img src="img/p3.jpg" alt="" width="100" height="100">
+                </div>
             </div>
-            <div class="item fasion">
-                <img src="img/p2.jpg" alt="" width="100" height="100">
+            <div class="raw-2">
+
+                <div class="item nature">
+                    <img src="img/p4.jpg" alt="" width="100" height="100">
+                </div>
+                <div class="item fasion">
+                    <img src="img/p5.jpg" alt="" width="100" height="100">
+                </div>
+                <div class="item weading">
+                    <img src="img/p6.jpg" alt="" width="100" height="100">
+                </div>
             </div>
-            <div class="item weading">
-                <img src="img/p3.jpg" alt="" width="100" height="100">
-            </div>
-            <div class="item nature">
-                <img src="img/p4.jpg" alt="" width="100" height="100">
-            </div>
-            <div class="item fasion">
-                <img src="img/p5.jpg" alt="" width="100" height="100">
-            </div>
-            <div class="item weading">
-                <img src="img/p6.jpg" alt="" width="100" height="100">
-            </div>
-            <div class="item nature">
-                <img src="img/p7.jpg" alt="" width="100" height="100">
-            </div>
-            <div class="item fasion">
-                <img src="img/p8.jpg" alt="" width="100" height="100">
-            </div>
-            <div class="item weading">
-                <img src="img/p9.jpg" alt="" width="100" height="100">
+            <div class="raw-3">
+
+                <div class="item nature">
+                    <img src="img/p7.jpg" alt="" width="100" height="100">
+                </div>
+                <div class="item fasion">
+                    <img src="img/p8.jpg" alt="" width="100" height="100">
+                </div>
+                <div class="item weading">
+                    <img src="img/p9.jpg" alt="" width="100" height="100">
+                </div>
             </div>
         </div>
     </div>
